feat: add method for getting active poll
