# docs/swagger.yaml
@@ -1183,6 +1183,48 @@ paths:
       summary: Завершить покер-комнату
       tags:
       - Polls
+    get:
+      description: Возвращает текущий активный Planning Poker для доски, включая задачи,
+        голоса и приглашённых участников
+      parameters:
+      - description: UUID доски
+        format: uuid
+        in: path
+        name: board_link
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: active poll data
+          schema:
+            $ref: '#/definitions/github_com_go-park-mail-ru_2026_1_Clac_Clac_facade_internal_api.Response'
+        "400":
+          description: invalid board link
+          schema:
+            $ref: '#/definitions/github_com_go-park-mail-ru_2026_1_Clac_Clac_facade_internal_api.ErrorResponse'
+        "401":
+          description: unauthorized
+          schema:
+            $ref: '#/definitions/github_com_go-park-mail-ru_2026_1_Clac_Clac_facade_internal_api.ErrorResponse'
+        "403":
+          description: access to board denied
+          schema:
+            $ref: '#/definitions/github_com_go-park-mail-ru_2026_1_Clac_Clac_facade_internal_api.ErrorResponse'
+        "404":
+          description: no active poll for this board
+          schema:
+            $ref: '#/definitions/github_com_go-park-mail-ru_2026_1_Clac_Clac_facade_internal_api.ErrorResponse'
+        "500":
+          description: cannot get active poll
+          schema:
+            $ref: '#/definitions/github_com_go-park-mail-ru_2026_1_Clac_Clac_facade_internal_api.ErrorResponse'
+      security:
+      - sessionCookie: []
+      summary: Получить активный опрос
+      tags:
+      - Polls
     post:
       consumes:
       - application/json
